Use new 64 bit encode/decode